[FIX] `styles.css` overlapping rules

--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -39,7 +39,6 @@ body {
 	padding: 3px 15px 3px 15px;
   bottom: 15px;
   background-color: #c7e2fc17;
-  padding: 3px;
   border-radius: 100px;
 	column-gap: 20px;
   font-size: 2vh;
